--- a/src/components/pages/home/home.scss
+++ b/src/components/pages/home/home.scss
@@ -91,7 +91,7 @@
 }
 
 .picture {
-  background-color: red;
+  background-color: var(--picturebgcolor);
   height: 100%;
   width: 100%;
   max-width: 446px;
