--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,8 @@
   --text-color: rgba(255, 255, 255, 0.87);
   --link-color: #646cff;
   --link-hover: #535bf2;
-  --button-bg: #535bf2;
+  --button-bg: #ffffff;
+  --button-text: #242424;
   --navbar-bg: #1a1a1a;
   --accent-color: #ffd438;
   --mainbg-color: #242424;
@@ -16,6 +17,9 @@
   --navtext: #ffffff;
   --contactButtonColor: #242424;
   --colorButtonText: #ffffff;
+  --mainbackgroundefect: #28502b;
+  --picturebgcolor: #28502b;
+  --picturebgcolor: #b3c1a5;
 }
 
 .theme-light {
@@ -24,6 +28,7 @@
   --link-color: #646cff;
   --link-hover: #747bff;
   --button-bg: #f9f9f9;
+  --button-text: #242424;
   --navbar-bg: #1a1a1a;
   --accent-color: #ffd438;
   --mainbg-color: #fffffa;
@@ -33,6 +38,8 @@
   --navtext: #ffffff;
   --contactButtonColor: #242424;
   --colorButtonText: #ffffff;
+  --mainbackgroundefect: #50c878;
+  --picturebgcolor: #deb887;
 }
 
 //* Variables globales y tipografía
