--- a/src/components/background/background.scss
+++ b/src/components/background/background.scss
@@ -1,6 +1,7 @@
 .animated-bg {
-  background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-  background: linear-gradient(to left, #8f94fb, #4e54c8);
+  // background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+  // background: linear-gradient(to left, #8f94fb, #4e54c8);
+  background: var(--mainbackgroundefect);
   width: 100%;
   height: 100%;
   position: fixed; // <-- fondo fijo
